Fixed overflow on task item

--- a/scss/common/organisms/_tableTasks.scss
+++ b/scss/common/organisms/_tableTasks.scss
@@ -77,6 +77,13 @@
       color: inherit;
       text-decoration: underline;
     }
+
+    .task-description {
+      max-width: 20rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .column-plan {
